--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -163,7 +163,7 @@
                                                                 <view misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x7i-31-vW3">
                                                                     <rect key="frame" x="0.0" y="278" width="230" height="370"/>
                                                                     <subviews>
-                                                                        <scrollView ambiguous="YES" misplaced="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="30" horizontalPageScroll="0.0" verticalLineScroll="30" verticalPageScroll="0.0" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="P6e-Cg-kxT" customClass="InnerScroll">
+                                                                        <scrollView ambiguous="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="30" horizontalPageScroll="0.0" verticalLineScroll="30" verticalPageScroll="0.0" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="P6e-Cg-kxT" customClass="InnerScroll">
                                                                             <rect key="frame" x="0.0" y="0.0" width="230" height="157"/>
                                                                             <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="6mv-QM-cED">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="230" height="157"/>
@@ -217,15 +217,6 @@
                                                                                 <animations/>
                                                                             </scroller>
                                                                         </scrollView>
-                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3K9-eo-3jC">
-                                                                            <rect key="frame" x="18" y="349" width="97" height="21"/>
-                                                                            <animations/>
-                                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Source Language" id="jgU-VN-9IN">
-                                                                                <font key="font" metaFont="systemThin" size="11"/>
-                                                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                            </textFieldCell>
-                                                                        </textField>
                                                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F2S-qO-Wa8">
                                                                             <rect key="frame" x="194" y="166" width="20" height="20"/>
                                                                             <animations/>
@@ -237,8 +228,8 @@
                                                                                 <action selector="showTargetMenu:" target="hJv-Ja-bsx" id="rvM-7W-jlx"/>
                                                                             </connections>
                                                                         </button>
-                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqB-nM-KrJ">
-                                                                            <rect key="frame" x="18" y="165" width="105" height="21"/>
+                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqB-nM-KrJ">
+                                                                            <rect key="frame" x="18" y="164" width="105" height="21"/>
                                                                             <animations/>
                                                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Target Language" id="Uan-ga-5f9">
                                                                                 <font key="font" metaFont="systemThin" size="11"/>
@@ -322,12 +313,20 @@
                                                                                 <animations/>
                                                                             </scroller>
                                                                         </scrollView>
+                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3K9-eo-3jC">
+                                                                            <rect key="frame" x="18" y="349" width="97" height="21"/>
+                                                                            <animations/>
+                                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Source Language" id="jgU-VN-9IN">
+                                                                                <font key="font" metaFont="systemThin" size="11"/>
+                                                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                            </textFieldCell>
+                                                                        </textField>
                                                                     </subviews>
                                                                     <constraints>
                                                                         <constraint firstItem="j0U-BX-4ew" firstAttribute="leading" secondItem="x7i-31-vW3" secondAttribute="leading" id="DAI-qJ-a2E"/>
                                                                         <constraint firstItem="P6e-Cg-kxT" firstAttribute="leading" secondItem="x7i-31-vW3" secondAttribute="leading" id="VFj-1D-cJW"/>
                                                                         <constraint firstAttribute="width" constant="230" id="Vx4-We-L2P"/>
-                                                                        <constraint firstItem="P6e-Cg-kxT" firstAttribute="top" secondItem="zqB-nM-KrJ" secondAttribute="bottom" constant="8" id="oFV-fS-B7k"/>
                                                                         <constraint firstAttribute="height" constant="370" id="tAN-dZ-TeD"/>
                                                                     </constraints>
                                                                     <animations/>
@@ -392,7 +391,7 @@
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <animations/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                            <size key="minSize" width="488" height="74"/>
+                                                            <size key="minSize" width="458" height="74"/>
                                                             <size key="maxSize" width="524" height="10000000"/>
                                                             <attributedString key="textStorage">
                                                                 <fragment content="Type some text">
@@ -403,7 +402,7 @@
                                                                 </fragment>
                                                             </attributedString>
                                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                            <size key="minSize" width="488" height="74"/>
+                                                            <size key="minSize" width="458" height="74"/>
                                                             <size key="maxSize" width="524" height="10000000"/>
                                                         </textView>
                                                     </subviews>
